# desafio_nre1

./: README.md  db.sqlite3  pyproject.toml
myproject/: settings.py  urls.py
myproject/accounts/: admin.py  managers.py  models.py
myproject/accounts/migrations/: 0001_initial.py  0002_auto_20221014_1247.py  0003_auto_20221014_1252.py  0004_user_is_staff.py  0005_auto_20221014_1302.py
myproject/core/: views.py
testes/: db.sqlite3  manage.py
testes/testes/: asgi.py  settings.py  urls.py  wsgi.py
testes/users/: admin.py  managers.py  models.py  urls.py  views.py
testes/users/migrations/: 0001_initial.py  0002_customer_documents_alter_user_is_active.py
testes/users/templates/users/: files.html
